flex.jjt
options {
  IGNORE_CASE = false;
  MULTI = true;
  OPTIMIZE_TOKEN_MANAGER = true;
}

PARSER_BEGIN(comp)
import java.io.*;
import java.util.*;

class comp 
{

	public static Hashtable TS = new Hashtable();

	public static void main( String[] args )throws ParseException, Exception
	{
		try
		{	

			String aux;
    		STC    aux2;	

			System.out.println("Inicia el parser\n");

     		comp analizador = new comp( System.in ) ;
			SimpleNode n = analizador.Programa();

			System.out.println("\n\nARBOL DE SINTAXIS\n\n");

			n.dump(" ");

			Enumeration t = TS.keys();

			System.out.println(t);

			System.out.println("\n\nTABLA DE SIMBOLOS\n\n");

			while ( t.hasMoreElements() == true ) {

				aux = (String)t.nextElement();
				aux2 = (STC)TS.get(aux);
				System.out.println(aux);

				if ( aux2.type != null )
            		System.out.println(" Tipo: " + aux2.type);
          		if ( aux2.value != null )
            		System.out.println(" Valor: " + aux2.value);
            	if ( aux2.numLineas != 0 )
            		System.out.println(" Numero de linea: " + aux2.numLineas);

			}

			System.out.println("\tAnalizador ha terminado.");			
		}
		catch(ParseException e)
		{
			System.out.println(e.getMessage());
			System.out.println("\tCompiló con errores.");
		}
	}
}
PARSER_END(comp)

TOKEN:
{
	  <ASIGNACION : "="> //1
	| <PLUS : "+" >  //2
	| <MINUS:"-"> //3
	| <MULTIPLY:"*">  //4
	| <DIVIDE:"/"> //5
	| <INCR: "++" > //6
	| <DECR: "--" > //7
}

TOKEN:
{
	  <VOID: "void"> //8
	| <MAIN: "Main" | "main"> //9
	| <IF: "if" > //10
	| <ELSE:"else" > //11
	| <FOR:"for" > //12
	| <SWITCH:"switch" > //13
	| <CASE:"case" > //14
	| <BREAK:"break" > //15
	| <DEFAUL:"default" > //16
	| <DO:"do" > //17
	| <WHILE:"while" > //18
	| <WRITE:"printf" > //19
	| <READ:"scanf" > //20
	| <RETURN: "return"> //21
}

TOKEN:
{
	  <LPAREN: "(" > //22
	| <RPAREN: ")" > //23
	| <LBRACE: "{" > //24
	| <RBRACE: "}" > //25
	| <LBRACKET: "[" > //26
	| <RBRACKET: "]" > //27
	| <SEMICOLON: ";" > //28
	| <COMMA: "," > //29
	| <DOT: "." > //30
	| <DOUBLECOMMA: "\""> //31
}

TOKEN:
{
	  <EQ: "==" > //32
	| <LE: "<=" > //33
	| <MN: "<" > //34
	| <LSHIFTB: "<<"> //35
	| <GE: ">=" > //36
	| <GR: ">" > //37
	| <RSHIFTB: ">>"> //38
	| <NE: "!=" > //39
	| <OR: "||" > //40
	| <ORB: "|"> //41
	| <AND: "&&"> //42
	| <ANDB: "&"> //43
	| <XORB: "^"> //44
	| <NOTB: "~"> //45
}

TOKEN:
{
	  <INT:"int"> //46
	| <DEC: "float"> //47
	| <CHR: "char"> //48                                                                                        //Cadena era 49
	| <NUMBER : (["0"-"9"])+>  //49
	| <IDENTIFIER : ["a"-"z","A"-"Z"](["a"-"z","A"-"Z","0"-"9","_"])*>  //50
	| <DECIMAL : (["0"-"9"])+["."](["0"-"9"])+ > //51
	| <CADENA : <DOUBLECOMMA>["a"-"z","A"-"Z","0"-"9"," "](["a"-"z","A"-"Z","0"-"9"," ",":",";","."])*<DOUBLECOMMA>> //52
	| <CARAC : "'"["a"-"z","A"-"Z","0"-"9"]"'" >//53
	| <DOUBLEPOINT : ":"> //54
}

SKIP : 
{ 
	 	" "
	|	"\n"
	|	"\r"
	|	"\r\n"
	|	"\t"
	|	< "//" (~["\n","\r"])* ("\n" | "\r" | "\r\n") >  //Comentario de linea
	|	< "/*" > : IN_COMMENT    //Cuando encuentra /* pasa al estado IN_COMMENT
}

//Acciones cuando está en el estado IN_COMMENT
<IN_COMMENT> SKIP:
{
		<"*/"> : DEFAULT
	|	<~[] >
}


SimpleNode Programa() :
{}
{
	try{
		Definiciones()<EOF>	{return jjtThis;}	
	}catch(ParseException e){
		int[] follow = {EOF}; 
		error_skipto(follow,e);
	}
}


void Bloque() #void:
{}
{	
	LOOKAHEAD(3) VariablesGlobales() | LOOKAHEAD(2) Principal()
	
}

void Definiciones() #BloqueDeDefiniciones : 
{}
{
	try{
		LOOKAHEAD(3) 
		( LOOKAHEAD(3) Funcion() | VariablesGlobales() ) 
	| 
		( LOOKAHEAD(3) VariablesGlobales() | Principal() )
	}catch(ParseException e){
		int[] follow = {EOF}; 
		error_skipto(follow,e);
	}
}

//Cuerpo de funciones
void Funcion() :
{
	TokenAsignaciones.SetTables();
	Token tk;
	Token tk1;
	Token tk2;
}
{
	try{
		( tk = <VOID>  { jjtThis.value=tk.image; TS.put(tk.image, new STC("Void", tk.image, tk.beginLine));} 
		| tk= <INT> {jjtThis.value=tk.image; TS.put(tk.image, new STC("Int", tk.image, tk.beginLine));} 
		| tk = <DEC>  {jjtThis.value=tk.image; TS.put(tk.image, new STC("Dec", tk.image, tk.beginLine));} 
		| tk= <CHR>  {jjtThis.value=tk.image; TS.put(tk.image, new STC("Char", tk.image, tk.beginLine));}) 

		tk1= <IDENTIFIER> {jjtThis.value=tk1.image; TS.put(tk1.image, new STC("IDENTIFICADOR", tk1.image, tk1.beginLine));}

		<LPAREN>

		((Int()|Dec()|Chr())(Identifier())?(<COMMA>(Int()|Dec()|Chr())(Identifier())?)*)*

		<RPAREN> 

		<LBRACE> Sentencias()(SentenciaReturn())? <RBRACE> Definiciones()
	}catch(ParseException e){
		int[] follow = {VOID,INT,DEC,CHR,EOF}; 
		error_skipto(follow,e);
	}
}

void VariablesGlobales() #BloqueVariablesGlobales:
{}
{
	try{
		(Int()|Dec()|Chr()) Identifier() (<COMMA>Identifier())* <SEMICOLON> Bloque()	
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,EOF}; 
		error_skipto(follow,e);
	}
}

void Principal() #Main:
{
	TokenAsignaciones.SetTables();	
}
{
	try{
		<INT>
			<MAIN><LPAREN><VOID><RPAREN><LBRACE>Sentencias()SentenciaReturn()<RBRACE> 	
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,EOF}; 
		error_skipto(follow,e);
	}
}

void VariablesLocales() #void:
{
	int td;
	Token var;	
}
{
	try{
		(
			(TiposDatos())
			{
				td = token.kind;
			}
			var = <IDENTIFIER> 
			{		
				TokenAsignaciones.InsertarSimbolo(var, td);
			} 
			[VariablesAsignacion(var)]
			(
				<COMMA>
				var = <IDENTIFIER> 
				{		
					TokenAsignaciones.InsertarSimbolo(var, td);
				} 
				[VariablesAsignacion(var)]
			)*	
				<SEMICOLON> 
		)
		(VS())
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,IF,FOR,DO,SWITCH,SEMICOLON,IDENTIFIER}; 
		error_skipto(follow,e);
	}
}

void VariablesAsignacion(Token v1) #Asignacion:
{
	Token v2;
	Token v3;
	String res;	
	boolean imp = false;
}
{
	try{
		<ASIGNACION>
		(TiposAsignaciones())
		  {  
			v2 = token;
			res = TokenAsignaciones.checkAsing(v1, v2);
			
			if(res != " ")
			{
				System.out.println(res);
				imp = true;
			}
		  }
		  (OpAritmetico()
		  TiposAsignaciones()
		  {  
			v3 = token;
			res = TokenAsignaciones.checkAsing(v1, v3);
			
			if(res != " " && !imp)
			{
				System.out.println(res);
			}
		  })*
	}catch(ParseException e){
		int[] follow = {COMMA,SEMICOLON,INT,DEC,CHR}; 
		error_skipto(follow,e);
	}
}

void VS() #void:
{}
{
	LOOKAHEAD(3)VariablesLocales() | Sentencias()
}

void Sentencias() #void:
{}
{
	try{
		(	
		  VariablesLocales()	
	    | SentenciaIf() 	
		| SentenciaFor()
		| SentenciaDo()	
		| LOOKAHEAD(2)SentenciaAsignacion()<SEMICOLON>{TokenAsignaciones.segunda = 0;}
		| SentenciaSwitch()
		)*
	}catch(ParseException e){
		int[] follow = {RBRACE,RETURN,INT,DEC,CHR,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}
}

//Sentencia IF
void SentenciaIf():
{}
{
	try{
		<IF><LPAREN> A() <RPAREN> <LBRACE> Sentencias() <RBRACE> (Sino())? 
	}catch(ParseException e){
		int[] follow = {RBRACE,INT,DEC,CHR,FOR,DO,SWITCH,IDENTIFIER,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}
}


void Sino():
{}
{
	try{
		<ELSE><LBRACE> Sentencias() <RBRACE>
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,FOR,DO,SWITCH,IDENTIFIER}; 
		error_skipto(follow,e);
	}
}

void A():
{}
{	try{
		Comparaciones() ([(<AND>|<OR>)] Comparaciones())*
	}catch(ParseException e){
		int[] follow = {RPAREN}; 
		error_skipto(follow,e);
	}
}
//Fin sentencia if

void Comparaciones():
{}
{
	try{
		Valor()Operadores()Valor()
	}catch(ParseException e){
		int[] follow = {SEMICOLON,RPAREN,AND,OR}; 
		error_skipto(follow,e);
	}
}

void Valor():
{}
{
	try{
		LOOKAHEAD(2) (<IDENTIFIER> | <NUMBER>) | Expresion()
	}catch(ParseException e){
		int[] follow = {EQ,LE,GE,NE,GR,MN}; 
		error_skipto(follow,e);
	}
}
void Expresion():
{}
{
    LOOKAHEAD(2)(<NUMBER> | <IDENTIFIER>)
	|(<IDENTIFIER>|<NUMBER>) OpAritmetico() (<IDENTIFIER>|<NUMBER>) 
}

void Operadores():
{
	Token tk;
}
{
	    tk = <EQ> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
	  | tk = <LE> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));}
	  | tk = <GE> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
	  | tk = <NE> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
	  | tk = <GR> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
	  | tk = <MN> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
}
int OpAritmetico():
{}
{
	try{
		  (<PLUS> {return 1;})
		| (<MINUS> {return 1;})
		| (<MULTIPLY> {return 1;})
		| (<DIVIDE> {return 1;})
		| (<ANDB> {return 1;})
		| (<ORB> {return 1;})
		| (<XORB> {return 1;})
		| ({return 0;})
		
		{return 0;}
	}catch(ParseException e){
		int[] follow = {IDENTIFIER,NUMBER,IDENTIFIER,NUMBER,DECIMAL,CADENA,CARAC}; 
		error_skipto(follow,e);
	}
}

//SI SE PONE EN TABLA DE SIMBOLOS IMRPIME TIPO DE DATO, NO INCLUIR
void TiposDatos() #TipoDato:
{
	Token tk;
}
{
	 tk = <INT> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));} 
	|tk = <DEC> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));}
	|tk = <CHR> { jjtThis.value=tk.image; TS.put(tk.image, new STC("TIPO DE DATO", tk.image, tk.beginLine));}
}


//Sentencia FOR
void SentenciaFor():
{}
{
	try{
		<FOR> <LPAREN>(DeclaracionUnaVariable()|SentenciaAsignacion())<SEMICOLON> Comparaciones() <SEMICOLON> SentenciaAsignacion() <RPAREN> <LBRACE> Sentencias() <RBRACE>
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,IF,DO,SWITCH,IDENTIFIER,RBRACE,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}

}

void DeclaracionUnaVariable():
{
	int td;
	Token var;	
}
{	
	try{
		(TiposDatos())
		{
			td = token.kind;
		}
		var = <IDENTIFIER> { jjtThis.value=var.image; TS.put(var.image, new STC("NO C", var.image, var.beginLine));}
		{		
			TokenAsignaciones.InsertarSimbolo(var, td);
		} 
		[VariablesAsignacion(var)]	
	}catch(ParseException e){
		int[] follow = {SEMICOLON}; 
		error_skipto(follow,e);
	}	
}

//Sentencia DO
void SentenciaDo():
{}
{
	try{
		<DO> <LBRACE>Sentencias() <RBRACE> <WHILE> <LPAREN> Comparaciones() <RPAREN> | SentenciaWhile()
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,FOR,IF,SWITCH,IDENTIFIER,RBRACE,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}
}
void SentenciaWhile():
{}
{
	try{
		<WHILE> <LPAREN> Comparaciones() <RPAREN> <LBRACE> Sentencias() <RBRACE>
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,FOR,IF,SWITCH,IDENTIFIER,RBRACE,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}
}

//Sentencia ASIGNACION
void SentenciaAsignacion():
{
	Token v1;
	Token v2;
	Token v3;
	int aux;
	String res;
	boolean imp = false;
}
{
	try{
	  v1 = <IDENTIFIER> { jjtThis.value=v1.image; TS.put(v1.image, new STC("IDENTIFICADOR", v1.image, v1.beginLine));} 
	  (<ASIGNACION>
	  (TiposAsignaciones())
	  {  
	    v2 = token;
		res = TokenAsignaciones.checkAsing(v1, v2);
		
		if(res != " ")
		{
			System.out.println(res);
			imp = true;
		}
	  }
	  (LOOKAHEAD(2)OpAritmetico()
	  TiposAsignaciones()
	  {  
	    v3 = token;
		res = TokenAsignaciones.checkAsing(v1, v3);
		
		if(res != " " && !imp)
		{
			System.out.println(res);
		}
	  })*  
	  |
	  (<INCR>|<DECR>)
	  {  
		res = TokenAsignaciones.checkVariable(v1);
		
		if(res != " ")	
			System.out.println(res);	
		}) 		
	//SentenciaAsignacion ya trae <SEMICOLON> en el metodo Sentencias()
	}catch(ParseException e){
		int[] follow = {SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}
}

void TiposAsignaciones() #TipoAsignar:
{
	Token tk;
}
{
	try{
		  tk = <IDENTIFIER> { jjtThis.value=tk.image; TS.put(tk.image, new STC("IDENTIFICADOR", tk.image, tk.beginLine));} 
		| tk = <NUMBER>  { jjtThis.value=tk.image; TS.put(tk.image, new STC("NUMERO", tk.image, tk.beginLine));}
		| tk = <DECIMAL> { jjtThis.value=tk.image; TS.put(tk.image, new STC("DECIMAL", tk.image, tk.beginLine));} 
		| tk = <CARAC> { jjtThis.value=tk.image; TS.put(tk.image, new STC("CARACTER", tk.image, tk.beginLine));}
	}catch(ParseException e){
		int[] follow = {PLUS,MINUS,MULTIPLY,DIVIDE,ANDB,ORB,XORB,COMMA,SEMICOLON,INT,DEC,CHR}; 
		error_skipto(follow,e);
	}
}

//Sentencia WRITE
void SentenciaWrite():
{}
{
	<WRITE> <LPAREN> (Expresion()(<PLUS><CADENA>)*|<CADENA>(<PLUS>Expresion())*)* <RPAREN> <SEMICOLON> 
}

//Sentencia READ
void SentenciaRead():
{}
{
	<READ><LPAREN><RPAREN>
}

void SentenciaReturn():
{}
{
	try{
		<RETURN>(<NUMBER>|<IDENTIFIER>|<DECIMAL>|<CADENA>|<CARAC>)<SEMICOLON>
	}catch(ParseException e){
		int[] follow = {RBRACE}; 
		error_skipto(follow,e);
	}
}

void SentenciaSwitch():
{}
{
	try{
		<SWITCH><LPAREN><IDENTIFIER><RPAREN><LBRACE>(<CASE>(<IDENTIFIER>|<CADENA>|<CARAC>|<NUMBER>|<DECIMAL>)<DOUBLEPOINT>(SentenciaAsignacion()<SEMICOLON>)+ <BREAK><SEMICOLON>)+[<DEFAUL><DOUBLEPOINT>(SentenciaAsignacion()<SEMICOLON>)<BREAK><SEMICOLON>]<RBRACE>
	}catch(ParseException e){
		int[] follow = {INT,DEC,CHR,IF,DO,FOR,IDENTIFIER,RBRACE,SEMICOLON,RPAREN}; 
		error_skipto(follow,e);
	}

}


//Producciones Simbolos Terminales

void Void():
{
	Token tk;
}
{
	tk = <VOID> { jjtThis.value = tk.image; TS.put(tk.image, new STC("Void", tk.image, tk.beginLine)); }
}

void Int():
{
	Token tk; 
}
{
	tk = <INT> { jjtThis.value = tk.image; TS.put(tk.image, new STC("INT", tk.image, tk.beginLine)); }
}

void Dec():
{}
{
	<DEC>
}

void Chr():
{}
{
	<CHR>
}

void Identifier():
{}
{
	<IDENTIFIER>
}

void Number():
{}
{
	<NUMBER>
}

void Decimal():
{}
{
	<DECIMAL>
}

void CARAC():
{}
{
	<CARAC>
}

void Comma():
{}
{
	<COMMA>
}

void Rparen():
{}
{
	<RPAREN>
}

void Lparen():
{}
{
	<LPAREN>
}

void Lbrace():
{}
{
	<LBRACE>
}

void Rbrace():
{}
{
	<RBRACE>
}



//OPERADORES DE BITS
int OpBits():
{}
{
	  (<ANDB> {return 1;})
	| (<ORB> {return 1;})
	| (<XORB> {return 1;})
	
	{return 0;}
}

JAVACODE
void error_skipto(int kind[],ParseException e) {
  System.out.println(e.toString());  // print the error message
  int size = kind.length;
  Token t;
  boolean flag = true;
  do {
  t = getNextToken();
    for(int i = 0;i<size;i++){
    	if(kind[i] == t.kind){
    		flag = false;
    	}
    }
    if(t.kind == EOF)
    	flag = false;

  } while (flag);
}
