comp.java
/* comp.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. comp.java */
import java.io.*;
import java.util.*;

class comp/*@bgen(jjtree)*/implements compTreeConstants, compConstants {/*@bgen(jjtree)*/
  protected static JJTcompState jjtree = new JJTcompState();
        public static Hashtable TS = new Hashtable();

        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {

                        String aux;
                STC    aux2;

                        System.out.println("Inicia el parser\u005cn");

                comp analizador = new comp( System.in ) ;
                        SimpleNode n = analizador.Programa();

                        System.out.println("\u005cn\u005cnARBOL DE SINTAXIS\u005cn\u005cn");

                        n.dump(" ");

                        Enumeration t = TS.keys();

                        System.out.println(t);

                        System.out.println("\u005cn\u005cnTABLA DE SIMBOLOS\u005cn\u005cn");

                        while ( t.hasMoreElements() == true ) {

                                aux = (String)t.nextElement();
                                aux2 = (STC)TS.get(aux);
                                System.out.println(aux);

                                if ( aux2.type != null )
                        System.out.println(" Tipo: " + aux2.type);
                        if ( aux2.value != null )
                        System.out.println(" Valor: " + aux2.value);
                if ( aux2.numLineas != 0 )
                        System.out.println(" Numero de linea: " + aux2.numLineas);

                        }

                        System.out.println("\u005ctAnalizador ha terminado.");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("\u005ctCompil\u00c3\u00b3 con errores.");
                }
        }

  static final public SimpleNode Programa() throws ParseException {/*@bgen(jjtree) Programa */
  ASTPrograma jjtn000 = new ASTPrograma(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        Definiciones();
        jj_consume_token(0);
{if ("" != null) return jjtn000;}
      } catch (ParseException e) {
int[] follow = {EOF};
                error_skipto(follow,e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Bloque() throws ParseException {
    if (jj_2_1(3)) {
      VariablesGlobales();
    } else if (jj_2_2(2)) {
      Principal();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Definiciones() throws ParseException {/*@bgen(jjtree) BloqueDeDefiniciones */
  ASTBloqueDeDefiniciones jjtn000 = new ASTBloqueDeDefiniciones(JJTBLOQUEDEDEFINICIONES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        if (jj_2_5(3)) {
          if (jj_2_3(3)) {
            Funcion();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INT:
            case DEC:
            case CHR:{
              VariablesGlobales();
              break;
              }
            default:
              jj_la1[0] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case DEC:
          case CHR:{
            if (jj_2_4(3)) {
              VariablesGlobales();
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case INT:{
                Principal();
                break;
                }
              default:
                jj_la1[1] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (ParseException e) {
int[] follow = {EOF};
                error_skipto(follow,e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

//Cuerpo de funciones
  static final public void Funcion() throws ParseException {/*@bgen(jjtree) Funcion */
        ASTFuncion jjtn000 = new ASTFuncion(JJTFUNCION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);TokenAsignaciones.SetTables();
        Token tk;
        Token tk1;
        Token tk2;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VOID:{
          tk = jj_consume_token(VOID);
jjtn000.value=tk.image; TS.put(tk.image, new STC("Void", tk.image, tk.beginLine));
          break;
          }
        case INT:{
          tk = jj_consume_token(INT);
jjtn000.value=tk.image; TS.put(tk.image, new STC("Int", tk.image, tk.beginLine));
          break;
          }
        case DEC:{
          tk = jj_consume_token(DEC);
jjtn000.value=tk.image; TS.put(tk.image, new STC("Dec", tk.image, tk.beginLine));
          break;
          }
        case CHR:{
          tk = jj_consume_token(CHR);
jjtn000.value=tk.image; TS.put(tk.image, new STC("Char", tk.image, tk.beginLine));
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        tk1 = jj_consume_token(IDENTIFIER);
jjtn000.value=tk1.image; TS.put(tk1.image, new STC("IDENTIFICADOR", tk1.image, tk1.beginLine));
        jj_consume_token(LPAREN);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case DEC:
          case CHR:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:{
            Int();
            break;
            }
          case DEC:{
            Dec();
            break;
            }
          case CHR:{
            Chr();
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IDENTIFIER:{
            Identifier();
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            ;
          }
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMA:{
              ;
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              break label_2;
            }
            jj_consume_token(COMMA);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INT:{
              Int();
              break;
              }
            case DEC:{
              Dec();
              break;
              }
            case CHR:{
              Chr();
              break;
              }
            default:
              jj_la1[8] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case IDENTIFIER:{
              Identifier();
              break;
              }
            default:
              jj_la1[9] = jj_gen;
              ;
            }
          }
        }
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        Sentencias();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case RETURN:{
          SentenciaReturn();
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(RBRACE);
        Definiciones();
      } catch (ParseException e) {
int[] follow = {VOID,INT,DEC,CHR,EOF};
                error_skipto(follow,e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void VariablesGlobales() throws ParseException {/*@bgen(jjtree) BloqueVariablesGlobales */
  ASTBloqueVariablesGlobales jjtn000 = new ASTBloqueVariablesGlobales(JJTBLOQUEVARIABLESGLOBALES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:{
          Int();
          break;
          }
        case DEC:{
          Dec();
          break;
          }
        case CHR:{
          Chr();
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Identifier();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          Identifier();
        }
        jj_consume_token(SEMICOLON);
        Bloque();
      } catch (ParseException e) {
int[] follow = {INT,DEC,CHR,EOF};
                error_skipto(follow,e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Principal() throws ParseException {/*@bgen(jjtree) Main */
        ASTMain jjtn000 = new ASTMain(JJTMAIN);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);TokenAsignaciones.SetTables();
    try {
      try {
        jj_consume_token(INT);
        jj_consume_token(MAIN);
        jj_consume_token(LPAREN);
        jj_consume_token(VOID);
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        Sentencias();
        SentenciaReturn();
        jj_consume_token(RBRACE);
      } catch (ParseException e) {
int[] follow = {INT,DEC,CHR,EOF};
                error_skipto(follow,e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void VariablesLocales() throws ParseException {int td;
        Token var;
    try {
      TiposDatos();
td = token.kind;
      var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASIGNACION:{
        VariablesAsignacion(var);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        var = jj_consume_token(IDENTIFIER);
TokenAsignaciones.InsertarSimbolo(var, td);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASIGNACION:{
          VariablesAsignacion(var);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          ;
        }
      }
      jj_consume_token(SEMICOLON);
      VS();
    } catch (ParseException e) {
int[] follow = {INT,DEC,CHR,IF,FOR,DO,SWITCH,SEMICOLON,IDENTIFIER};
                error_skipto(follow,e);
    }
  }

  static final public void VariablesAsignacion(Token v1) throws ParseException {/*@bgen(jjtree) Asignacion */
        ASTAsignacion jjtn000 = new ASTAsignacion(JJTASIGNACION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token v2;
        Token v3;
        String res;
        boolean imp = false;
    try {
      try {
        jj_consume_token(ASIGNACION);
        TiposAsignaciones();
v2 = token;
                        res = TokenAsignaciones.checkAsing(v1, v2);
